2003-09-21  Bernhard Held <bernhard@bernhardheld.de>

	* device/lib/_fsdiv.c: replaced (1<<31) by (1ul<<31)

2003-09-19  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/mcs51/gen.c (loadDptrFromOperand, genFarPointerGet,
	genCodePointerGet, genGenPointerGet, genFarPointerSet,
	genGenPointerSet): handle AOP_DPTR correctly when loading dptr
	(ralloc doesn't intentionally do this now, but perhaps later)
	* src/mcs51/ralloc.c (serialRegAssign, fillGaps),
	* src/ds390/ralloc.c (serialRegAssign, fillGaps): fixed some
	register positioning bugs (Fixed bug #762602 and #795325)
	* src/SDCCicode.c (geniCodeDerefPtr): Track output class correctly
	(Fixed bug #808779)
	* src/z80/gen.c: increased _vemit2's buffer[] to handle long
	lines that --i-code-in-asm generates

2003-09-18  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	*link/z80/lklibr.c, as/mcs51/lklibr.c: Fixed Linux segfaults when
	trying to fclose a FILE* that was already closed.

2003-09-18  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCsymt.c (structElemType): fixed bug #808291 (members
	of const struct should be treated as if const themselves)

2003-09-18  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (valPlus, valMinus): fixed bug #808337

2003-07-06  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* support/librarian/sdcclib.c: Generate correct offsets for libraries with
	Unix (/n) and DOS (/r/n) line terminations.

2003-09-17  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCopt.c (cnvFromFloatCast, cnvToFloatCast): fixed
	bug #613775

2003-09-16  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genFunction, genEndFunction),
	* src/ds390/gen.c (genFunction, genEndFunction): Moved save
	and restore of EA so that stack offsets to parameters are
	correct when using both critical and reentrant/stack-auto.
	* src/z80/gen.c (aopOp): removed erroneous assertion about sloc
	size (can be triggered in error if sloc is shared between
	different sized objects)